--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ tiberius = "0.12.3"
 tokio = { version = "1.46.1", features = ["full"] }
 tokio-util = { version = "0.7.15", features = ["full"] }
 uuid = { version = "1.17.0", features = ["serde", "v4"] }
+futures = "0.3.31"
