--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ tokio = { version = "1.46.1", features = ["full"] }
 tokio-util = { version = "0.7.15", features = ["full"] }
 uuid = { version = "1.17.0", features = ["serde", "v4"] }
 futures = "0.3.31"
+once_cell = "1.21.3"
+full = "0.3.0"
