--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ uuid = { version = "1.17.0", features = ["serde", "v4"] }
 futures = "0.3.31"
 once_cell = "1.21.3"
 full = "0.3.0"
+lazy_static = "1.5.0"
